# web_chat

client/: HOW_TO_RUN.md  index.html
client/src/css/: register.css  styles.css
client/src/js/: api.js  examples.js  forms.js
client/src/pages/: login.html  register.html
server/: .env.example  Cargo.toml
server/migrations/: 20251109212902_init.sql  20251111181617_create_tables.sql  20251116112038_create_roles.sql
server/src/: lib.rs  main.rs  telemetry.rs
server/src/app/: mod.rs
server/src/app/controllers/: user_controller.rs
server/src/app/extensions/: jwt_coding.rs  mod.rs  request_error.rs
server/src/app/middlewares/: jwt.rs
server/src/app/models/profiles/: domain.rs  mod.rs  profile_request.rs  profile_response.rs
server/src/app/models/users/: domain.rs  mod.rs  user_request.rs  user_response.rs
server/src/app/repositories/: profile_repository.rs  user_repository.rs
server/src/app/routers/: mod.rs  swagger_router.rs  user_router.rs
server/src/app/services/: user_service.rs
server/src/core/: api_doc.rs  app_config.rs  app_data.rs  app_error.rs  database.rs  mod.rs  server.rs  telemetry.rs
