[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.48.0", features = ["full"] }
actix-cors = "0.7.1"
actix-web = "4.11.0"

sqlx = { version = "0.8.6", features = ["chrono", "postgres", "uuid"] }
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["serde"] }

tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
dotenvy = "0.15.7"
