[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"

tokio = { version = "1.48.0", features = ["full"] }
actix-cors = "0.7.1"
actix-web = "4.11.0"

sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
jsonwebtoken = "9.3.1"

tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }

dotenvy = "0.15.7"
config = "0.15.19"
validator = "0.20.0"
expect-test = "1.5.1"
argon2 = "0.5.3"
rand = "0.9.2"

utoipa = { version = "5.4.0", features = ["chrono", "macros", "uuid", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

